installed tailwind css, renamed folders, organized files

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alin Gabriel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
   <div>
     <header>
-      <h1>
+      <h1 class="text-4xl text-yellow-500 font-bold">
         Alin Gabriel
       </h1>
       <h2>
