text for about section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Junior Full Stack Developer
           </h2>
           <p class="mt-4 max-w-xs leading-normal">
-        I build accessible, inclusive products and amazing experinces for the web
+        I build accessible, inclusive products and amazing experiences for the web
           </p>
           <nav class="nav hidden lg:block">
             <ul class="mt-16 w-max">
@@ -105,7 +105,13 @@
             </div>
             <div>
                 <p class="mb-4">
-                    Text to be inserted here
+                    My adventure started at a young age, being curious about everything that means technology and programming, I learned on the go what a website means and what improvements it could bring.
+                    </p>
+                <p class="mb-4">
+                    A bit of PHP, HTML, Linux and then I created my first server to host my own website. I have had the privilege over time to work for numerous companies that trained me professionally and brought me to the level I am today, but I definitely still have a lot to discover.
+                </p>
+                <p class="mb-4">
+                    Currently, I support the Full Stack Developer courses on Codecademy where I have perfected my knowledge of HTML, CSS and JavaScript. I hope to learn as much programming as possible to be able to become what I want.
                 </p>
             </div>
         </section>
