--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                                     </a>
                                 </h3>
                                 <p class="mt-2 text-sm leading-normal">
-                                    Text to be inserted here
+                                    Portofolio site built with Visual Studio Code
                                 </p>
                                 <ul class="mt-2 flex flex-wrap">
                                     <li class="mr-1.5 mt-2">
@@ -544,9 +544,9 @@
                                 <h3>
                                     <a class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="#" target="_blank" rel="noreferrer"aria-label="">
                                         <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
-                                        <span>gaiaartcuisine Website
+                                        <span>gaiaartcuisine.ro
                                             <span class="inline-block">
-                                                App
+                                                Website
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true">
                                                     <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
                                                 </svg>
@@ -555,17 +555,17 @@
                                     </a>
                                 </h3>
                                 <p class="mt-2 text-sm leading-normal">
-                                    Text to be inserted here
+                                    Site created for a local restaurant, built with Wordpress, PHP, JavaScript and designed with CSS
                                 </p>
                                 <ul class="mt-2 flex flex-wrap">
                                     <li class="mr-1.5 mt-2">
                                         <div class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">
-                                            HTML
+                                            Wordpress
                                         </div>
                                     </li>
                                     <li class="mr-1.5 mt-2">
                                         <div class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">
-                                            CSS
+                                            PHP
                                         </div>
                                     </li>
                                     <li class="mr-1.5 mt-2">
@@ -575,7 +575,7 @@
                                     </li>
                                     <li class="mr-1.5 mt-2">
                                         <div class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">
-                                            Visual Studio
+                                            CSS
                                         </div>
                                     </li>
                                 </ul>
@@ -602,7 +602,7 @@
                                     </a>
                                 </h3>
                                 <p class="mt-2 text-sm leading-normal">
-                                    Text to be inserted here
+                                    A custom project created as a task and as a hobby in which it randomly predicts a result of a match from a current stage in the Romanian SuperLiga (Romania's 1st Football League)
                                 </p>
                                 <ul class="mt-2 flex flex-wrap">
                                     <li class="mr-1.5 mt-2">
