image logos for projects

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <img alt="" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" srcSet="img/course-card.webp" src="img/course-card.webp"/>
+                            <img alt="" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" srcSet="img/alin.png" src="img/alin.png"/>
                         </div>
                     </li>
                     <li class="mb-12">
@@ -580,7 +580,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <img alt="" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" srcSet="img/course-card.webp" src="img/course-card.webp"/>
+                            <img alt="" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" srcSet="img/gaia.png" src="img/gaia.png"/>
                         </div>
                     </li>
                     <li class="mb-12">
@@ -627,7 +627,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <img alt="" loading="lazy" width="200" height="48" decoding="async" data-nimg="1" class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" srcSet="img/course-card.webp" src="img/course-card.webp"/>
+                            <img alt="" loading="lazy" width="200" height="50" decoding="async" data-nimg="1" class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1" style="color:transparent" srcSet="img/java.png" src="img/java.png"/>
                         </div>
                     </li>
                 </ul>
