button contact to email & style

--- a/index.html
+++ b/index.html
@@ -660,9 +660,9 @@
                 <h1 class="text-center text-4xl font-bold tracking-tight text-slate-200 sm:text-5xl">Get in Touch</h1>
                 <p class="block text-center mt-4">My basic principles are to see all the projects through to the end and finish them at high standards.
                     I am open to any project that would represent a challenge for me.</p>
-                <div class="mt-2 flex justify-center">
-                    <div class="mr-1.5 mt-2">
-                        <a class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300" href="#" rel="noopener noreferrer" target="_blank">Hello</a>
+                <div class="mt-4 mb-4 flex justify-center">
+                    <div class="mr-1.5 mt-2" style="transition-delay: 400ms;">
+                        <a class="contact-button" href="#" rel="noopener noreferrer" target="_blank">Hello</a>
                     </div>
                 </div>
                 
