href email contact

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                     I am open to any project that would represent a challenge for me.</p>
                 <div class="mt-4 mb-4 flex justify-center">
                     <div class="mr-1.5 mt-2" style="transition-delay: 400ms;">
-                        <a class="contact-button" href="#" rel="noopener noreferrer" target="_blank">Hello</a>
+                        <a class="contact-button" href="mailto:alingabriel9598@gmail.com" rel="noopener noreferrer" target="_blank">Hello</a>
                     </div>
                 </div>
                 
