--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             </div>
         </section>
         <footer class="max-w-md pb-16 text-sm text-slate-500 sm:pb-0">
-            <p>Copyright 2023 - alingabriel.com
+            <p>Copyright © 2023 - alingabriel.com
             </p>
         </footer>
       </main>
