added interactivity javascript : background spotlight

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" class="scroll-smooth">
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alin Gabriel</title>
     <link rel="stylesheet" href="css/main.css">
-</head>
-<body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
-  <div class="mx-auto min-h-screen max-w-screen-xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
-    <div class="lg:flex lg:justify-between lg:gap-4">
-      <header class="lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
+  </head>
+  <body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-teal-300 selection:text-teal-900">
+      <div id="spotlight" style="background:radial-gradient(
+        600px circle at 0px 0px,
+        rgba(29, 78, 216, 0.15),
+        transparent 80%
+      )"></div>
+      <div class="mx-auto min-h-screen max-w-screen-xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
+        <div class="lg:flex lg:justify-between lg:gap-4">
+          <header class="lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
         <div>
           <h1 class="text-4xl font-bold tracking-tight text-slate-200 sm:text-5xl">
         Alin Gabriel
@@ -79,8 +84,8 @@
                 </a>
             </li>
         </ul>
-      </header>
-      <main id="content" class="pt-24 lg:w-1/2 lg:py-24">
+          </header>
+          <main id="content" class="pt-24 lg:w-1/2 lg:py-24">
         <section id="about" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24" aria-label="About me">
             <div class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
                 <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 lg:sr-only">
@@ -656,9 +661,12 @@
             <p>Copyright © 2023 - alingabriel.com
             </p>
         </footer>
-      </main>
-    </div>
-  </div>
-  <script src="js/script.js"></script>
-</body>
+          </main>
+        </div>
+      </div>
+    <script id="__NEXT_DATA__" type="application/json">
+    {"props":{"pageProps":{}},"page":"/","query":{},"buildId":"atRdlgNa-UETNJy3z-yxQ","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}
+    </script>
+    <script src="js/script.js" async></script>
+  </body>
 </html>
