added interactive scroll active nav menu

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact">
+        <section id="contact" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24" aria-label="Contact">
             <div class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
                 <h2 class="text-sm font-bold uppercase tracking-widest text-slate-200 lg:sr-only">
                     Contact
@@ -664,9 +664,6 @@
           </main>
         </div>
       </div>
-    <script id="__NEXT_DATA__" type="application/json">
-    {"props":{"pageProps":{}},"page":"/","query":{},"buildId":"atRdlgNa-UETNJy3z-yxQ","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}
-    </script>
     <script src="js/script.js" async></script>
   </body>
 </html>
